[gd_scene load_steps=10 format=3 uid="uid://b7g63s7dulymw"]

[ext_resource type="Script" path="res://weapons/fists.gd" id="1_rak57"]

[sub_resource type="BoxMesh" id="BoxMesh_v7x8s"]
size = Vector3(0.6, 0.15, 0.2)

[sub_resource type="BoxShape3D" id="BoxShape3D_0hc45"]
size = Vector3(0.25, 0.25, 0.5)

[sub_resource type="Animation" id="Animation_sekqr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.00565308, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.49929, 0.534591, 0.0222848)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.138371, 1.63327, 0.579772)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Right:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1.18715e-07, 1.85148, 0.726022)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Right:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.44711, 0.0606437, -0.138507)]
}

[sub_resource type="Animation" id="Animation_f0ou5"]
resource_name = "fist_activate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.49929, -0.872574, 0.0222848), Vector3(-0.49929, -0.289384, 0.0222848)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.138371, 1.63327, 0.579772), Vector3(0.138371, 1.63327, 0.579772)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Right:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.44711, -0.966111, -0.138507), Vector3(0.44711, -0.338603, -0.138507)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Right:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1.08822e-07, 1.85148, 0.726022), Vector3(9.89289e-08, 1.85148, 0.726022)]
}

[sub_resource type="Animation" id="Animation_oxsbe"]
resource_name = "fist_deactivate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -2.26261, 0)]
}

[sub_resource type="Animation" id="Animation_mdrra"]
resource_name = "fist_punch_left"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Left:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.49929, -0.18956, 0.139588)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Left:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.101991, 1.68334, 0.991519)]
}

[sub_resource type="Animation" id="Animation_btwt2"]
resource_name = "fist_punch_right"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfmme"]
_data = {
"RESET": SubResource("Animation_sekqr"),
"fist_activate": SubResource("Animation_f0ou5"),
"fist_deactivate": SubResource("Animation_oxsbe"),
"fist_punch_left": SubResource("Animation_mdrra"),
"fist_punch_right": SubResource("Animation_btwt2")
}

[node name="Fists" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00565308, 0)
script = ExtResource("1_rak57")

[node name="Left" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0231844, 0.149368, 0.98851, 0.542597, 0.828591, -0.13793, -0.839673, 0.53956, -0.0618363, -0.49929, 0.534591, 0.0222848)
mesh = SubResource("BoxMesh_v7x8s")
skeleton = NodePath("")

[node name="LeftHitBox" type="Area3D" parent="Left"]
transform = Transform3D(1, -2.98023e-08, -3.72529e-09, -1.49012e-07, 1, 1.11759e-08, 3.72529e-09, 0, 1, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Left/LeftHitBox"]
transform = Transform3D(-4.09782e-08, -2.98023e-08, -1, 1.11759e-08, 1, 1.19209e-07, 1, 7.45058e-09, -4.84288e-08, 0.190292, 0.0639311, 0.0269781)
shape = SubResource("BoxShape3D_0hc45")

[node name="Right" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.207156, 0.183909, 0.960866, 0.6639, 0.747821, -1.18715e-07, -0.718556, 0.637919, -0.277013, 0.44711, 0.0606437, -0.138507)
mesh = SubResource("BoxMesh_v7x8s")
skeleton = NodePath("")

[node name="RightHitBox" type="Area3D" parent="Right"]
transform = Transform3D(1, 0, 1.49012e-08, 0, 1, 0, -1.49012e-08, 1.49012e-08, 1, 0, 0, 0)
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Right/RightHitBox"]
transform = Transform3D(-4.47035e-08, 0, -1, 0, 1, -8.9407e-08, 1, 1.93715e-07, 2.98023e-08, 0.194739, 0.0696028, 0.00476074)
shape = SubResource("BoxShape3D_0hc45")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gfmme")
}

[node name="RightTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="LeftTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RightTimer" to="." method="_on_right_timer_timeout"]
[connection signal="timeout" from="LeftTimer" to="." method="_on_left_timer_timeout"]
